DashboardController を DTO 返却に修正